# N7

1A/Analyse de données/TP1/: exercice_3.m
1A/Analyse de données/TP2/: exercice_1.m  exercice_2.m  score.m
1A/Analyse de données/TP3/: exercice_3.m  moyenne.m  resultats_ex1.mat
1A/Analyse de données/TP4/: TP4AD.m  kppv.m
1A/Anglais/: Alcohol Vocabulary Cartes _ Quizlet.html  CE anglais.docx  Phone Interview Anglais Questions.docx  Should we allow alcoholic drinks in parties organized at ENSEEIHT.docx  Written reflection on civic engagement.docx  cv thales anglais.pptx  lettre motivation thales anglais.docx  meeting alcohol agenda.docx  trucanglais.txt.txt
1A/Anglais/Alcohol Vocabulary Cartes _ Quizlet_files/: ads.43839f6e2688b11ab9ec.a.fr-fr.js.téléchargement  apstag.js.téléchargement  common.bbb3d43cb46ba4e.a.fr-fr.js.téléchargement  contact_us_modal_lazy.8d7d6e09f140f0c.a.fr-fr.js.téléchargement  f(1).txt  global.f6f1e7a213ea3fa.css  gpt.js.téléchargement  gtm.js.téléchargement  header_and_common.674d082fecf6f235a839.a.fr-fr.js.téléchargement  jquery.2c72143f39b9906.a.fr-fr.js.téléchargement  leaflet.78edbddd02503ec.a.fr-fr.js.téléchargement  login_signup_lazy.3e17d8f3d7f133b.a.fr-fr.js.téléchargement  m=yolo_frame_library(1)  main.d75d03b2600dbc8e5afd.a.fr-fr.js.téléchargement  n11s_lazy.27e59537e3716a8.a.fr-fr.js.téléchargement  prosemirror.afb3a2f13c10087.a.fr-fr.js.téléchargement  pubads_impl_rendering_2019103101.js.téléchargement  quizlet_minimal_init.1961d4244f28011f071f.a.fr-fr.js.téléchargement  quizlet_shared_kotlin.02f487d16e127ba.a.fr-fr.js.téléchargement  react.ed26585317f9b11.a.fr-fr.js.téléchargement  redux_and_immutable.6720b86cc5aaf5d.a.fr-fr.js.téléchargement  request.html  rich_text.c69a6f7fcf20013.css  set.75204b3de9511e1.css  set.e7aae855bff5baad4f2b.a.fr-fr.js.téléchargement  set_modals_lazy.285d257a143f7b5.a.fr-fr.js.téléchargement  set_preview_cards.4e958d958bd2187.a.fr-fr.js.téléchargement  set_term_lazy.b5fa788f0ad5cf5.a.fr-fr.js.téléchargement  ui.60a8718dbb95248.css
1A/Anglais/Minutes/: Minutes legalization of cannabis.docx
1A/Architecture/Craps_mini/: adder32.shdl  adder4.shdl  addition.txt  craps.shdl  decoder4to16.shdl  decoder5to32.shdl  reg32.shdl  registres.shdl
1A/Architecture/craps/: carre.txt  doc craps.txt  erathosthene.txt  max.txt  sumtab.txt  tp5ex1.txt  tp5ex2.txt  tp5ex3.txt  tribulle.txt
1A/Architecture/shdl/: adder.txt  bi2dec.txt  clock.txt  count.txt  decoder.txt  doc shdl.txt  reg.txt  shdl_complet (1).txt  test.txt  troisetat.txt  ucmp.txt
1A/Architecture/tp1/: test.tst  testaddsub.tst
1A/Architecture/tp2/: usage_statistics_webtalk.html  usage_statistics_webtalk.xml
1A/Automatique/: tp1.slx
1A/CS-AD/: TestLUPIV  TestLUPIV.f90
1A/CS-AD/TP1/: PETIT_ROUX_SADURNI_partie1.rar  PETIT_ROUX_SADURNI_partie1.tar
1A/Calcul Scientifique/src_TP1/: cgs.m  mgs.m  tp.m
1A/Calcul Scientifique/src_TP2/: TestLUPIV.f90
1A/EDP/: advection.m
1A/FORTRAN/01 - Exemples de programme (page 26)/: lisez-moi.txt  nombre_dor  nombre_dor.f  nombre_dor.f90  tri_bulle  tri_bulle.f90  tri_bulle_simple  tri_bulle_simple.f90
1A/FORTRAN/02 - Exemple de procédure (page 29)/: tri_bulle_subroutine  tri_bulle_subroutine.f90
1A/FORTRAN/03 - Corrigés Hörner (page 32)/: horner.f90  horner0.f90  nombre_dor_fonction.f90
1A/FORTRAN/04 - Dimension principale d'un tableau (page 33)/: init_matrice.f90
1A/FORTRAN/05 - Exemples de manipulation de pointeurs (page 35)/: pointeurs_exemple.f90  pointeurs_exercice.f90  pointeurs_exercice.txt
1A/FORTRAN/07 - Format (page 43)/: format  format.f90  lisez-moi.txt
1A/Langage_C/: 1SN_LangageC.ipynb  assert-comprendre  pgcd  pgcd.c  pgcd.txt
1A/Langage_C/.ipynb_checkpoints/: 1SN_LangageC-checkpoint.ipynb
1A/Modelisation/TP1/: .Naturelle.aux  First co  Naturelle.glob  Naturelle.vo  TP2coq  proposition.mlw  tp3coq
1A/Modelisation/why3/: ._ascendant.mlw  ._descendant.mlw  ._division.mlw  ._pgcd.mlw  ascendant.mlw  descendant.mlw  descendant.mlw.bak  division.mlw  pgcd.mlw
1A/Optimisation/: CD.m  Hess_MC_CD.m  Jac_res_CD.m  MC_CD.m  grad_MC_CD.m  res_CD.m
1A/Reseaux Locaux/Ressources-20200128/: 1SN_Projet_Internet.doc
1A/Reseaux Locaux/cours/: Quiz sur le réseau local wifi _ Evaluation de la semaine 3 _ Contenu du cours 101008 _ FUN-MOOC.html
1A/Traitement du signal/: projet.rar
1A/divers/: cv 2.pptx  cv thales.pptx  cv.pptx  lettre motivation thales.docx
1A/italien/: CompitoSADURNI.docx  DIALOGO – ITALIANO – IL NOSTRO RAPPORTI CON LO SPORT E L’ATTIVITA FISICA.docx  INDICATIVO O CONGIUNTIVO.docx  bufala_Thomas_SADURNI.pptx  bufala_dire.pptx  cosa sono le bufale.pptx  exoINDICATIVOOCONGIUNTIVO.docx  froma passiva.docx  lettre motivation ferrari.docx  lettre motivation ferrari.odt  periodo ipotetico attività mondopaese.docx  prop.docx
1A/pim/: pim.rar
1A/pim/c2/: exam  (+2 more)
2A/Anglais/: AGAINST side.docx  BAD WORDS ARENT BAD.docx  CSR script.odt  How is your scientific English.docx  Lit review writting.docx  Literature review.docx  Literature review.odt  M1 - Literature Review [research task].docx  Reaction paper.docx  Rhetorical device.docx  Task 1 - notes on vocabulary & quiz.docx  answer sheet to fill in [optional].docx  debate head of adjucators.docx  presentation gerris.docx
2A/Appentisage Profond/: DL2021_TP3_Classification_de_chiens_et_chats_Sujet.ipynb  DL21 - TP1 - Sujet.ipynb  DL21 - TP6 - Localisation dobjet - Sujet.ipynb  DL21-TP7-YOLO-Sujet.ipynb  DL21_TP5_Estimation_de_Posture_Sujet.ipynb
2A/Donnees_Reparties/: Architecture.docx
2A/Italien/: Thomas SADURNI partiel N7C semestre2.docx  corretto SADURNI Thomas A-3 esercizi - per B2.docx
2A/Rendu/TP_2_roux_sadurni/TP1/: CMakeLists.txt  moreteapots.cpp
2A/Rendu/TP_2_roux_sadurni/TP2/: CMakeLists.txt  robot.c
2A/Rendu/TP_2_roux_sadurni/TP3/: CMakeLists.txt  lumiere.c
2A/Rendu/TP_2_roux_sadurni/TP4/: CMakeLists.txt  core.cpp  testEdge.cpp
2A/Traitement d'image/: kmeans.cpp
2A/Traitement d'image/tpTI-v2021.0.3/src/tutorials/: CMakeLists.txt  display_image.cpp  load_modify_image.cpp  mat_the_basic_image_container.cpp
(+2056 files in other folders)
